fixed z-index related bugs

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@
     margin: auto;
     align-content: center;
     justify-content: center;
-    z-index: -1;
 }
 
 .home-buttons {
