--- a/css/services.css
+++ b/css/services.css
@@ -3,7 +3,6 @@
     height: auto;
     align-self: center;
     margin: auto;
-    z-index: -1;
 }
 
 .toggle-button {
